--- a/package.json
+++ b/package.json
@@ -4,22 +4,30 @@
   "license": "MIT",
   "scripts": {
     "multi-router": "truffle test test/multirouter.test.js --network dev --bail",
-    "test": "truffle test test/bank-manual.test.js --network dev --bail",
-    "test1": "truffle compile --all --quiet && truffle test test/bank.test.js --network dev --bail",
+    "testx": "truffle test test/bank-manual.test.js --network dev --bail",
+    "test": "truffle compile --all --quiet && truffle test test/bank-manual.test.js --network dev --bail",
     "live": "truffle compile --all --quiet && nodemon --exec yarn test -e sol,js",
     "live-router": "truffle compile --all --quiet && nodemon --exec yarn multi-router -e sol,js"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^2.1.7",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^3.1.0",
     "@openzeppelin/contracts-upgradeable": "^3.4.0",
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.10",
     "@truffle/hdwallet-provider": "1.2.1",
-    "chai": "^4.2.0",
-    "dotenv": "^8.2.0",
+    "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.14",
     "ganache-time-traveler": "https://github.com/ejwessel/GanacheTimeTraveler",
+    "hardhat": "^2.6.8",
+    "hardhat-contract-sizer": "^2.1.1",
+    "hardhat-deploy": "^0.9.8",
+    "hardhat-deploy-ethers": "^0.3.0-beta.11",
+    "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-spdx-license-identifier": "^2.0.3",
     "numeral": "^2.0.6",
     "solidity-coverage": "^0.7.13",
     "truffle": "^5.1.58",
